# QFreqtradeUI

./: CMakeLists.txt  README.md  buydialog.cpp  buydialog.h  buydialog.ui  confviewerdialog.cpp  confviewerdialog.h  confviewerdialog.ui  freqtrade.rc  freqtradeprocess.cpp  freqtradeprocess.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  qjsontablemodel.cpp  resources.qrc  restclient.cpp  restclient.h
